# agepy

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  environment.yaml  setup.cfg
.github/workflows/: docs.yml  publish-to-pypi.yml  test.yml
docs/: agepy.ageplot.rst  agepy.plot.rst  conf.py  contribute.rst  git.rst  index.rst  installation.rst  reference.rst  requirements.txt  tutorials.rst  venv.rst
docs/_notebooks/: coincedence.ipynb  energy_scan.ipynb  plotting.ipynb
docs/_templates/: agepy_module.rst
src/agepy/: interactive.py
src/agepy/ageplot/: __init__.py  age.mplstyle  nature.mplstyle  pccp.mplstyle  powerpoint.mplstyle  tex.mplstyle
src/agepy/interactive/: __init__.py  _interactive.py  agefit.py  coincedence.py  photons.py
src/agepy/interactive/fitting/: __init__.py  _fitting.py  _spec.py  agefit.py  agefit.ui  fitting.ui  fitwindow.py  fitwindow.ui  iminuit.py  mag.py  models.py  spec.py
src/agepy/interactive/ui/: __init__.py  fitwindow.py  fitwindow.ui  floatslider.py  labeldialog.py  labeldialog.ui
src/agepy/mag/: faraday_correction.py  hysteresis.py  trajectory.py
src/agepy/plot/: __init__.py  mpl_default.mplstyle
src/agepy/spec/: _anodes.py  coincidence.py  photons.py
src/agepy/spec/interactive/: photons.py
tests/: test_ageplot.py  test_mag_trajectory.py  test_spec_coincedence.py
