[metadata]
name = agepy
version = attr: agepy.__version__
author = Adrian Peter Krone
author_email = adrian.krone@physik.uni-kassel.de
description = Python package of Arbeitsgruppe Ehresmann
long_description = file: README.md
long_description_content_type = text/markdown
license = "MIT"
license_files = file: LICENSE

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.8
install_requires =
    numpy >= 1.18
    matplotlib >= 3.7

#[options.entry_points]
#console_scripts =
#    cli-name = mypkg.mymodule:some_func
#gui_scripts =
#    hello-world = agepy.something:hello_world

[options.packages.find]
where = src